fix: in minisplits, blocks that contain pty output may have excess whitespace
This PR adds a way for streaming controllers to request that the view remove all prior output. Previously, the pty/client controller was calling xtermContainer.remove() directly, i.e. it was manipulating the DOM directly. Nope!!

Fixes #6759

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -127,6 +127,13 @@ body.still-loading .repl {
 }
 
 /* generic */
+.kui--ignore-if-empty {
+  display: flex;
+  flex: 1;
+  &:empty {
+    display: none;
+  }
+}
 .kui--hero-text {
   flex: 1;
   display: flex;
